--- a/src/main/resources/assets/sib_energy_craft/lang/en_us.json
+++ b/src/main/resources/assets/sib_energy_craft/lang/en_us.json
@@ -8,6 +8,13 @@
   "block.sib_energy_craft.rubber_wood": "Rubber Wood",
   "block.sib_energy_craft.stripped_rubber_wood": "Stripped Rubber Wood",
 
+  "block.sib_energy_craft.rubber_button": "Rubber Button",
+  "block.sib_energy_craft.rubber_fence": "Rubber Fence",
+  "block.sib_energy_craft.rubber_fence_gate": "Rubber Fence Gate",
+  "block.sib_energy_craft.rubber_pressure_plate": "Rubber Pressure Plate",
+  "block.sib_energy_craft.rubber_slab": "Rubber Slab",
+  "block.sib_energy_craft.rubber_stairs": "Rubber Stairs",
+
   "item.sib_energy_craft.tree_tap": "Tree Tap",
   "item.sib_energy_craft.rubber": "Rubber",
   "item.sib_energy_craft.vulcanized_rubber": "Vulcanized Rubber"
