--- a/src/main/resources/assets/sib_energy_craft/lang/ru_ru.json
+++ b/src/main/resources/assets/sib_energy_craft/lang/ru_ru.json
@@ -1,12 +1,19 @@
 {
-  "block.sib_energy_craft.rubber_leaves": "Листья каучукового дерева",
-  "block.sib_energy_craft.rubber_sapling": "Саженец каучукового дерева",
-  "block.sib_energy_craft.potted_rubber_sapling": "Саженец каучука в горшке",
-  "block.sib_energy_craft.rubber_log": "Каучуковое бревно",
-  "block.sib_energy_craft.stripped_rubber_log": "Обтёсанное каучуковое бревно",
-  "block.sib_energy_craft.rubber_planks": "Доски каучукового дерева",
-  "block.sib_energy_craft.rubber_wood": "Каучуковое дерево",
-  "block.sib_energy_craft.stripped_rubber_wood": "Обтёсанное каучуковое дерево",
+  "block.sib_energy_craft.rubber_leaves": "Листья гевеи",
+  "block.sib_energy_craft.rubber_sapling": "Саженец гевеи",
+  "block.sib_energy_craft.potted_rubber_sapling": "Саженец гевеи в горшке",
+  "block.sib_energy_craft.rubber_log": "Бревно гевеи",
+  "block.sib_energy_craft.stripped_rubber_log": "Обтёсанное бревно гевеи",
+  "block.sib_energy_craft.rubber_planks": "Доски гевеи",
+  "block.sib_energy_craft.rubber_wood": "Гевея",
+  "block.sib_energy_craft.stripped_rubber_wood": "Обтёсанное дерево гевеи",
+
+  "block.sib_energy_craft.rubber_button": "Кнопка из гевеи",
+  "block.sib_energy_craft.rubber_fence": "Забор из гевеи",
+  "block.sib_energy_craft.rubber_fence_gate": "Калитка из гевеи",
+  "block.sib_energy_craft.rubber_pressure_plate": "Нажимная плита из гевеи",
+  "block.sib_energy_craft.rubber_slab": "Плита из гевеи",
+  "block.sib_energy_craft.rubber_stairs": "Ступеньки из гевеи",
 
   "item.sib_energy_craft.tree_tap": "Краник для дерева",
   "item.sib_energy_craft.rubber": "Каучук",
