Add rubber doors

--- a/src/main/resources/assets/sib_energy_craft/lang/en_us.json
+++ b/src/main/resources/assets/sib_energy_craft/lang/en_us.json
@@ -9,11 +9,13 @@
   "block.sib_energy_craft.stripped_rubber_wood": "Stripped Rubber Wood",
 
   "block.sib_energy_craft.rubber_button": "Rubber Button",
+  "block.sib_energy_craft.rubber_door": "Rubber Door",
   "block.sib_energy_craft.rubber_fence": "Rubber Fence",
   "block.sib_energy_craft.rubber_fence_gate": "Rubber Fence Gate",
   "block.sib_energy_craft.rubber_pressure_plate": "Rubber Pressure Plate",
   "block.sib_energy_craft.rubber_slab": "Rubber Slab",
   "block.sib_energy_craft.rubber_stairs": "Rubber Stairs",
+  "block.sib_energy_craft.rubber_trapdoor": "Rubber Trapdoor",
 
   "item.sib_energy_craft.tree_tap": "Tree Tap",
   "item.sib_energy_craft.rubber": "Rubber",
